Corrected title error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <section>
       <h1>
-        The Cluetrain Manifesto
+        The The Crypto-Anarchist Manifesto
       </h1>
       <h4>
         summarized by
