--- a/index.html
+++ b/index.html
@@ -3,59 +3,35 @@
   <head>
   	<meta charset="utf-8">
 		<link type="text/css" rel="stylesheet" href="style.css"/>
-    <title>The Crypto-Anarchist Manifesto</title>
+    <title>Karthik Web App Project</title>
   </head>
   <body>
     <section>
       <h1>
-        The The Crypto-Anarchist Manifesto
+        Web Application Class Final Project
       </h1>
-      <h4>
-        summarized by
-      </h4>
-      <h3>
-        Karthik Krishnamurthy
-      </h3>
     </section>
-    <a href="http://www.activism.net/cypherpunk/crypto-anarchy.html">Original Source</a>
+	<section>
+    <a href="Intro.html">Application link</a>
+	</section>
+	<a href="SAS Presentation Slides.ppt">Design Presentation</a>
     <section>
       <h5>Overview</h5>
-      <p>The Crypto-Anarchist Manifesto declares that as technology improves the world head towards crypto-anarchy. In other words crypto graphics will be so precise that interactions and transactions that happen on the internet will be untrace able. This will mean:</p>
-      <ul>
-        <li>People will be able to exchange messages, conduct business, and negotiate electronic contracts without ever knowing the legal identity of another person and keeping tehir identity a secret.</li>
-        <li>Government regulation will be completely alterred. Taxation and controlling the economy will be difficult to do.</li>
-        <li>The ability to keep information secret and even the nature of trust itself will be altered</li>
-      </ul>
+      <p>We were tasked to implement a user interface designed by a team from the NC State School of Design. My main contribution to the project was reverse engineering code on the D3 website and figuring out how to parse the JSON file with the data and implementing the logic behind the color size an labels of the graph.</p>
     </section>
     <section>
-      <h5>What needs to be done</h5>
-      <p>The technology for the revolution has exists in mathemattical theory and has been the subject of many acedemic confrences that have been monitored by the NSA.As technoligal advances are amde and access to the internet becomes faster and hardware becomes more powerfull.</p>
-      <p>Some of the enabiling technologies include:</p>
-      <ul>
-        <li>High-speed networks</li>
-        <li>ISDN</li>
-        <li>tamper-proof boxes</li>
-        <li>smart cards</li>
-        <li>satellites</li>
-        <li>Ku-band transmitters</li>
-        <li>multi-MIPS personal computers</li>
-        <li>encryption chips</li>
-      </ul>
+      <h5>How to use</h5>
+      <p>To login click on the center of the logo.(Don't worry about entering information)</p>
+	  <p> Click any of the nodes and drag them. To change graphs click on the tabs of the menu bar up top to bring up a drop down menu and click on any of the options.(Some graphs have not been implemented)
     </section>
     <section>
-      <h5>Problems and obstacles</h5>
-      <p>The governement will try to halt this technology citing the following reasons:</p>
+      <p>What each symbol means:</p>
       <ul>
-        <li>national security concerns</li>
-        <li>Sell of illegal or stolen goods online</li>
-        <li>Creating a haven for tax evaders</li>
-        <li>The fear of social integration</li>
+        <li>The largest node represents the user(project manger)</li>
+        <li>The second largest nodes represents people working on the project </li>
+        <li>The smallest nodes are project files</li>
+        <li>The links represents ownership.(ex. If a file is linked to a person then that person owns that file)</li>
       </ul>
-      <p> These concerns are valid.Criminals and terrorists will unfortunately take advantage of the Crypto net. However these concerns will not halt the rise of crypto-anarchism</p>
-    </section>
-    <section>
-      <h5>Conclusion</h5>
-    <p>Crypto anarchism will revolutionize the social landscape the same way the printing press destroyed the power of guilds in medeival society, Crypto anarchism will destroy the power that corporations and the government has on the economy. A liquid market for anything that can be turned into words or pictures will be created and this market will alter the very nature of intellectual property</p>
     </section>
   </body>
 </html>
