--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section>
     <a href="Intro.html">Application link</a>
 	</section>
-	<a href="SAS Presentation Slides.ppt">Design Presentation</a>
+	<a href="SAS Presentation Slides.pptx">Design Presentation</a>
     <section>
       <h5>Overview</h5>
       <p>We were tasked to implement a user interface designed by a team from the NC State School of Design. My main contribution to the project was reverse engineering code on the D3 website and figuring out how to parse the JSON file with the data and implementing the logic behind the color size an labels of the graph.</p>
