--- a/index.html
+++ b/index.html
@@ -33,5 +33,30 @@
         <li>The links represents ownership.(ex. If a file is linked to a person then that person owns that file)</li>
       </ul>
     </section>
+	<section>
+      <h1>
+        Quiz(Work in progress)
+      </h1>
+    </section>
+	<section>
+    <a href="quiz.html">Application link</a>
+	</section>
+    <section>
+      <h5>Overview</h5>
+      <p>Simple quiz game I am making in order to learn AngularJS.</p>
+    </section>
+    <section>
+      <h5>How to use</h5>
+	  <p> Select the option that you think is correct. The correct answer will add one point, but an incorrect answer will subtract a point. You can guess as many times as you want but the more times you guess wrong the lower your score. And no cheating! 
+    </section>
+    <section>
+      <p>Future implementations:</p>
+      <ul>
+        <li>More questions</li>
+        <li>Option to choose which category of questions</li>
+        <li>Ranking title based on score (ex. Novice, expert)</li>
+        <li>Better visuals>
+      </ul>
+    </section>
   </body>
 </html>
