--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li>More questions</li>
         <li>Option to choose which category of questions</li>
         <li>Ranking title based on score (ex. Novice, expert)</li>
-        <li>Better visuals>
+        <li>Better visuals></li>
       </ul>
     </section>
   </body>
